Fix for javascript build errors

--- a/content/Components/toast.hbs
+++ b/content/Components/toast.hbs
@@ -31,7 +31,7 @@ js-toast: true
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        {{> toast toast }}
@@ -49,7 +49,6 @@ js-toast: true
 				        {{> toast toast--warn }}
 				        {{> toast toast--danger }}
 				        {{> toast toast--success }}
-				        <!-- end of code -->
 			        </div>
 
 		        </section>
