Repositioned debug window

--- a/assets/less/base/typography.less
+++ b/assets/less/base/typography.less
@@ -86,7 +86,7 @@ hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 1px solid #CCC;
+    border-top: 1px solid @COLOR-GreyLight;
     padding: 0;
     ._margin (@TYPE-LineHeight, 0, @TYPE-LineHeight, 0);
 }
