--- a/assets/less/base_modules/article.less
+++ b/assets/less/base_modules/article.less
@@ -11,6 +11,10 @@
     .lead {
 		._font-size (@TYPE-SIZE-Delta);
     }
+
+    hr {
+    	margin: @TYPE-LineHeight+0px 40%;
+    }
 }
 
 .article__head {
