--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -16,6 +16,12 @@
 // HTML5 DISPLAY
 // ----------------------------------------------------
 
+@-webkit-viewport{width:device-width}
+@-moz-viewport{width:device-width}
+@-ms-viewport{width:device-width}
+@-o-viewport{width:device-width}
+@viewport{width:device-width}
+
 article,
 aside,
 details,
@@ -55,6 +61,7 @@ html {
     -ms-text-size-adjust: 100%;
     overflow-y: scroll;
     min-height: 100%;
+
 }
 
 html,
