--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -32,7 +32,7 @@
  		$(".toast").click(function(e) {
  			e.preventDefault();
  			var json = $(this).data("toast");
- 			$(".w--main").toast(json);
+ 			$.toast(json);
  		}); 		
  	});
 </script>
