--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -29,7 +29,7 @@
 {{#if js-toast}}
 <script type="text/JavaScript">
  	require(["toast"], function() {
- 		$(".toast").click(function(e) {
+ 		$("[data-toast]").click(function(e) {
  			e.preventDefault();
  			var json = $(this).data("toast");
  			$.toast(json);
