--- a/content/Components/toast.hbs
+++ b/content/Components/toast.hbs
@@ -35,6 +35,7 @@ js-toast: true
 				        <!-- code -->
 
 				        {{> toast toast }}
+
 			        </div>
 
 		        </section>
@@ -59,7 +60,7 @@ js-toast: true
 		            <header class="section__head">
 		            	<h2 class="section__title">Example: Toast</h2>
 		            </header>
-		            	<a href="#" class="button toast" data-toast='{"item": {"modifier": "","status": "success"}, "content": {"text": "You did it! A toast that pops up from the bottom of the page!","icon": [{"item": {"modifier": "tick7","size": "xlarge"},"content": {"title": "" }}]}}'>Click here to see a live toast</a>
+		            	<a href="#" class="button" data-toast='{"item": {"modifier": "","status": "success"}, "content": {"text": "You did it! A toast that pops up from the bottom of the page!","icon": [{"item": {"modifier": "round52","size": "xlarge"},"content": {"title": "" }}]}}'>Click here to see a live toast</a>
 		            	<!-- end of code -->
 			        </div>
 
