--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -8,7 +8,8 @@
 // DEBUG
 // ----------------------------------------------------
 
-@DEBUG:                         false;
+@DEBUG:                         true;
+@DEBUGGER:						true;
 
 // COLOURS
 // ----------------------------------------------------
