--- a/content/_partials/ALLOY_debug.hbs
+++ b/content/_partials/ALLOY_debug.hbs
@@ -1,32 +1,17 @@
-<style>
-   .debugger {
-        background-color: navajowhite;
-        position: fixed;
-        top: 0;
-        right: 0;
-        z-index: 9999;
-        opacity: 0.7;
-        pointer-events: none;
-        padding: 10px;
-    }
- 
-    .debugger ul {
-        padding: 0;
-        margin: 0;
-    }
-</style>
 
 <div class="debugger">
-    <div><em>Debugger</em></div>
-    <ul id="debugger__list"></ul>
+    <div class="debugger__head"><em>Debugger</em></div>
+    <div class="debugger__body">
+        <ul class="list list__debugger"></ul>
+    </div>
 </div>
 
 <script type="text/javascript">
     require(['logging'], function() {
         ALLOY.Logger.alterConfig({ 
             logToScreenFunc : function(ev) {
-                $("#debugger__list").append(
-                    "<li>" + ev.timeStr() + " - " + ev.message + "</li>"
+                $(".list__debugger").append(
+                    "<li class=\"list__item " + ev.level.toLowerCase() + "\"><strong>" + ev.timeStr() + "</strong> " + ev.message + "</li>"
                 );
             }
         });
