Committing to get latest

--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -52,7 +52,7 @@
     {{> ALLOY_footer }}
     {{> ALLOY_copyright }}
     {{> ALLOY_scripts }}
-    {{> ALLOY_debug }}
+    {{#DEBUG}}{{> ALLOY_debug }}{{/DEBUG}}
 
     <!-- <div class="modal__mask modal__mask--visible"></div> -->
 
