--- a/content/_partials/focus.hbs
+++ b/content/_partials/focus.hbs
@@ -1,5 +1,5 @@
 {{#this}}
-<div class="focus{{#if item.modifier}} focus--{{item.modifier}}{{/if}}{{#if item.depth}} d{{item.depth}}{{/if}}">
+<div class="focus{{#if item.modifier}} focus--{{item.modifier}}{{/if}}{{#if item.depth}}{{/if}}{{#if item.depth}} d{{item.depth}}{{/if}}">
 	{{#if content.title}}
 	<div class="focus__head">
 		<h4 class="focus__title">{{content.title}}</h4>
