--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -11,7 +11,7 @@
 
 @STYLE-RoundedCorners:          true; // Rounds buttons, alerts, pagination, wells
 @STYLE-BorderRadius:            8;
-@STYLE-BodyBgColor:             @COLOR-GreyLighter;
+@STYLE-BodyBgColor:             @COLOR-White;
 
 // HTML5 DISPLAY
 // ----------------------------------------------------
