--- a/content/_partials/form__label.hbs
+++ b/content/_partials/form__label.hbs
@@ -2,7 +2,8 @@
 	<label
 	    {{#if item.for}}for="{{item.for}}"{{/if}}
 	    class="form__label{{#if item.modifier}} form__label--{{item.modifier}}{{/if}}
-	    {{#if item.disabled}} disabled{{/if}}">
+	    {{#if item.disabled}} disabled{{/if}}
+	    {{#if item.hidden}} hidden-text{{/if}}">
 	    <span>{{{content.text}}}</span>
 	</label>
 {{/this}}
