--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -233,9 +233,9 @@ input[type="radio"] {
 
 input[type="search"] {
     -webkit-appearance: textfield;
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 input[type="search"]::-webkit-search-cancel-button,
