Some bits on debug and dropmenu

--- a/assets/less/base/debug.less
+++ b/assets/less/base/debug.less
@@ -37,7 +37,7 @@
 	.warn {color: @COLOR-Orange;}
 	.error {color: @COLOR-Red;}
 	.fatal {color: @COLOR-Red;}
-	.off {}
+	.off {color: @COLOR-GreyLight;}
 }
 } .debugger-styles();
 
