Flash js, and a fix in button

--- a/assets/less/base_modules/flash.less
+++ b/assets/less/base_modules/flash.less
@@ -31,6 +31,12 @@
         ._margin-top(10);
     }
 
+    &.example {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 9999;
+    }
     
     &.info {
         background-color: @FLASH-Info;
