--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -8,7 +8,7 @@
 // DEBUG
 // ----------------------------------------------------
 
-@DEBUG:                         true;
+@DEBUG:                         false;
 @DEBUGGER:						true;
 
 // COLOURS
