--- a/assets/less/base_modules/article.less
+++ b/assets/less/base_modules/article.less
@@ -2,6 +2,11 @@
 // ARTICLE
 // =======================================================================*/
 
+// VARIABLES
+// ----------------------------------------------------
+
+@ARTICLE-ShareColor:			@COLOR-Grey;
+
 // BASE
 // ----------------------------------------------------
 
@@ -17,6 +22,9 @@
 
 .article__head {
 	text-align: center;
+ 	max-width: 40em;
+ 	margin: 0 auto;
+	._font-size (@TYPE-SIZE-Beta);
 	._margin-bottom (@TYPE-LineHeight);
 }
 
@@ -40,19 +48,36 @@
  }
 
  .article__aside {
- 	background-color: @COLOR-LimeLighter;
- 	._padding (@TYPE-LineHeight);
+ 	border-left: 5px solid @COLOR-GreyLight;
+ 	._padding (0, @TYPE-LineHeight);
  	._font-size (@TYPE-FontSize);
  }
 
 .article__foot {
 	text-align: center;
+ 	max-width: 40em;
+ 	margin: 0 auto;
 	._margin-top (@TYPE-LineHeight);
 }
 
 .article__image {
 	display: block;
 	margin: 0 auto @TYPE-LineHeight+0px;
+}
+
+.share {
+	text-align: center;
+
+	.share__link {
+		color: @ARTICLE-ShareColor;
+		text-decoration: none;
+		._font-size (40);
+		._transition (color, 0.1s);
+
+		&:hover {
+			color: lighten(@ARTICLE-ShareColor, 5%);
+		}
+	}
 }
 
 // MOBILE
@@ -67,66 +92,12 @@
 
 @media only screen and (min-width: @MQ-Medium-min) {
 
-	.article {
-		.left--wide {
-			float: left;
-			._margin (0, @TYPE-LineHeight, @TYPE-LineHeight, 0);
-		}
-
-		.right--wide {
-			float: right;
-			._margin (0, 0, @TYPE-LineHeight, @TYPE-LineHeight);
-		}
-	}
-
 }
 
 // DESKTOP
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Large) {
-
-	.article {
-		.left--wide {
-			._margin-left (-100);
-		}
-
-		.right--wide {
-			._margin-right (-100);
-		}
-
-		.block {
-			width: 100%;
-		}
-
-		.block--left {
-			._margin-left (-100);
-
-			img {
-				width: 100%;
-			}
-		}
-
-		.block--right {
-			._margin-right (-100);
-
-			img {
-				width: 100%;
-			}
-		}
-
-		.block--full {
-        	._margin (0, -100, @TYPE-LineHeight, -100);
-
-			img {
-				width: 100%;
-			}
-		}
-
-		blockquote {
-        	._margin (0, -100, @TYPE-LineHeight, -100);
-		}
-	}
 
 }
 
@@ -139,8 +110,8 @@
 		.article__aside {
 		 	position: absolute;
 		 	top: 0;
-		 	right: -310px;
-		 	width: 300px;
+		 	right: -274px;
+		 	width: 250px;
 		}
 	}
 
