--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -45,6 +45,7 @@
 @import "base_modules/toast.less";
 @import "base_modules/image.less";
 @import "base_modules/rte.less";
+@import "base_modules/ink.less";
 
 // MODULES
 // ----------------------------------------------------
