--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -4,6 +4,10 @@
 <!-- GitHub Buttons -->
 <script async defer id="github-bjs" src="//buttons.github.io/buttons.js"></script>
 
+<script type="text/JavaScript">
+	require(["ink"], function() { });
+</script>
+
 {{#if js-accordion}}
 <script type="text/JavaScript">
 	require(["accordion"], function() {
