--- a/content/_partials/input__text.hbs
+++ b/content/_partials/input__text.hbs
@@ -4,6 +4,7 @@
         role="textbox"
         class="form__input
             {{#if item.modifier}} form__input--{{item.modifier}}{{/if}}
+            {{#if item.status}} {{item.status}}{{/if}}
             {{#if item.size}} {{item.size}}{{/if}}"
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.readonly}} readonly="readonly" aria-readonly="true"{{/if}}
