--- a/content/Components/Tabs.hbs
+++ b/content/Components/Tabs.hbs
@@ -34,6 +34,7 @@ js-tabs: true
 		            <div class="section__body">
 				        <!-- code -->
 	        				{{> tabs tabs }}
+	        				{{> tabs tabs--vertical }}
 
 				        <!-- end of code -->
 			        </div>
