--- a/content/_partials/tabs.hbs
+++ b/content/_partials/tabs.hbs
@@ -1,9 +1,9 @@
 {{#this}}
 {{#if content.tabs}}
-<div{{#if item.id}} id="{{item.id}}"{{/if}} class="tabs{{#if item.modifier}} tabs--{{item.modifier}}{{/if}}">
+<div{{#if item.id}} id="{{item.id}}"{{/if}} class="tabs{{#if item.modifier}} tabs--{{item.modifier}}{{/if}}{{#if item.orientation}} {{item.orientation}}{{/if}}">
 	<div class="tabs__tray">
 		<ul class="list list__tabs">
-			{{#each content.tabs}} 
+			{{#each content.tabs}}
 				{{#this}}
 					<li class="list__item">
 						<a href="#{{#if item.id}}{{item.id}}{{/if}}" class="list__link"{{#if content.tabTitle}} title="{{content.tabTitle}}"{{/if}}><span>{{{content.tabText}}}</span></a>
