Adding some descriptions to simple items

--- a/content/Components/boxes.hbs
+++ b/content/Components/boxes.hbs
@@ -20,7 +20,7 @@ page-category: "components"
 <!-- writings -->
 
 		        <div class="page__body rte">
-
+					<p>Discussion Point: Are <code>.box</code> blocks just <code>.card</code> or <code>.panel</code> blocks under a different name?</p>
 		        </div>
 
 <!-- example -->
