--- a/content/Components/badges.hbs
+++ b/content/Components/badges.hbs
@@ -20,7 +20,7 @@ page-category: "components"
 <!-- writings -->
 
 		        <div class="page__body rte">
-
+					<p><code>.badge</code> blocks should be used as counters on UI elements - they can also be used in profile style information but are not supposed to be used within major content.</p>
 		        </div>
 
 <!-- example -->
